Changed VirtualHost conf

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -28,7 +28,7 @@ WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 WSGIPassAuthorization On
 
 <VirtualHost ray.acm.uiuc.edu>
-    <Location /myapp>
+    <Location /login>
             AuthType                Kerberos
             AuthName                "Kerberos Login"
             KrbMethodNegotiate      On
