change virtualhost conf to be *:80

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -27,7 +27,7 @@ WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 
 WSGIPassAuthorization On
 
-<VirtualHost ray.acm.uiuc.edu>
+<VirtualHost *:80u>
     <Location /login>
             AuthType                Kerberos
             AuthName                "Kerberos Login"
