--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -27,7 +27,7 @@ WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 
 WSGIPassAuthorization On
 
-<VirtualHost *:80u>
+<VirtualHost *:80>
     <Location /login>
             AuthType                Kerberos
             AuthName                "Kerberos Login"
