--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -34,7 +34,7 @@ WSGIPassAuthorization On
             KrbMethodNegotiate      On
             KrbMethodK5Passwd       On
             KrbAuthRealms           ACM.UIUC.EDU
-            Krb5Keytab              /etc/krb5.keytab
+            Krb5Keytab              /etc/soda.keytab
             KrbServiceName          HTTP/ray.acm.uiuc.edu
             require                 valid-user
     </Location>
