trying some new bereros options

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -30,12 +30,10 @@ WSGIPassAuthorization On
 <VirtualHost *:80>
     <Location /login>
             AuthType                Kerberos
-            AuthName                "Kerberos Login"
+            AuthName                "Kerberos Login (ACM Linux password)"
             KrbMethodNegotiate      On
-            KrbMethodK5Passwd       On
             KrbAuthRealms           ACM.UIUC.EDU
             Krb5Keytab              /etc/soda.keytab
-            KrbServiceName          HTTP/ray.acm.uiuc.edu
             require                 valid-user
     </Location>
 </VirtualHost>
