--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -33,7 +33,7 @@ WSGIPassAuthorization On
             AuthName                "Kerberos Login (ACM Linux password)"
             KrbMethodNegotiate      On
             KrbAuthRealms           ACM.UIUC.EDU
-            Krb5Keytab              /etc/soda.keytab
+            Krb5Keytab              /etc/www.keytab
             require                 valid-user
     </Location>
 </VirtualHost>
