--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -33,6 +33,7 @@ WSGIPassAuthorization On
             AuthName                "Kerberos Login (ACM Linux password)"
             KrbMethodNegotiate      On
             KrbAuthRealms           ACM.UIUC.EDU
+            KrbServiceName          HTTP/ray.acm.uiuc.edu@ACM.UIUC.EDU
             Krb5Keytab              /etc/www.keytab
             require                 valid-user
     </Location>
