changing keytabs, again

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -34,7 +34,7 @@ WSGIPassAuthorization On
             KrbMethodNegotiate      On
             KrbAuthRealms           ACM.UIUC.EDU
             KrbServiceName          HTTP/ray.acm.uiuc.edu@ACM.UIUC.EDU
-            Krb5Keytab              /etc/www.keytab
+            Krb5Keytab              /etc/soda.keytab
             require                 valid-user
     </Location>
 </VirtualHost>
