comment out KrbServiceName to try default

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -33,7 +33,7 @@ WSGIPassAuthorization On
             AuthName                "Kerberos Login (ACM Linux password)"
             KrbMethodNegotiate      On
             KrbAuthRealms           ACM.UIUC.EDU
-            KrbServiceName          HTTP/ray.acm.uiuc.edu
+            #KrbServiceName          HTTP/ray.acm.uiuc.edu
             Krb5Keytab              /etc/liquid.keytab
             require                 valid-user
     </Location>
