Who need VirtualHosts?

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -27,14 +27,13 @@ WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 
 WSGIPassAuthorization On
 
-<VirtualHost *:80>
-    <Location /login>
-            AuthType                Kerberos
-            AuthName                "Kerberos Login (ACM Linux password)"
-            KrbMethodNegotiate      On
-            KrbAuthRealms           ACM.UIUC.EDU
-            #KrbServiceName          HTTP/ray.acm.uiuc.edu
-            Krb5Keytab              /etc/liquid.keytab
-            require                 valid-user
-    </Location>
-</VirtualHost>
+<LocationMatch "/login">
+        SSLRequireSSL
+        AuthType                Kerberos
+        AuthName                "Kerberos Login (ACM Linux password)"
+        KrbMethodNegotiate      On
+        KrbAuthRealms           ACM.UIUC.EDU
+        #KrbServiceName          HTTP/ray.acm.uiuc.edu
+        Krb5Keytab              /etc/liquid.keytab
+        require                 valid-user
+</LocationMatch>
