Comment out the ssl requirement

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -28,7 +28,7 @@ WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 WSGIPassAuthorization On
 
 <LocationMatch "/login">
-        SSLRequireSSL
+        #SSLRequireSSL
         AuthType                Kerberos
         AuthName                "Kerberos Login (ACM Linux password)"
         KrbMethodNegotiate      On
