--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,39 +1,25 @@
 
-<Directory "/var/www/liquid/static">
+<Directory "/var/www/liquid/liquid/static">
    Order deny,allow
    Allow from all
 </Directory>
 
-<Directory "/var/www/liquid">
+<Directory "/var/www/liquid/liquid">
     AllowOverride All
     Order deny,allow
     Allow from all
 </Directory>
 
-LoadModule	auth_kerb_module	/usr/lib/apache2/modules/mod_auth_kerb.so
 
+LogLevel debug
 
-Alias /static/ /var/www/liquid/static/
+Alias /static/ /var/www/liquid/liquid/static/
 ServerAdmin admin@acm.uiuc.edu
 ErrorLog "/var/log/apache2/acm.uiuc.edu-error_log"
 CustomLog "/var/log/apache2/acm.uiuc.edu-access_log" common
-# mod_wsgi configuration is here
-WSGISocketPrefix /var/run/wsgi
 WSGIDaemonProcess liquid user=apache group=apache processes=2 threads=25
 WSGIProcessGroup liquid
-WSGIPythonPath /var/www/liquid/env/lib/python
+
 # this is our WSGI file.
 WSGIScriptAlias / /var/www/liquid/apache/django.wsgi
 
-WSGIPassAuthorization On
-
-<LocationMatch "/login">
-        #SSLRequireSSL
-        AuthType                Kerberos
-        AuthName                "Kerberos Login (ACM Linux password)"
-        KrbMethodNegotiate      On
-        KrbAuthRealms           ACM.UIUC.EDU
-        #KrbServiceName          HTTP/ray.acm.uiuc.edu
-        Krb5Keytab              /etc/liquid.keytab
-        require                 valid-user
-</LocationMatch>
