--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -15,8 +15,8 @@ LogLevel debug
 
 Alias /static/ /var/www/liquid/liquid/static/
 ServerAdmin admin@acm.illinois.edu
-ErrorLog "/var/log/apache2/acm.illinois.edu-error_log"
-CustomLog "/var/log/apache2/acm.illinois.edu-access_log" common
+ErrorLog "/var/log/apache2/acm.uicu.edu-error_log"
+CustomLog "/var/log/apache2/acm.uiuc.edu-access_log" common
 WSGIDaemonProcess liquid user=apache group=apache processes=2 threads=25
 WSGIProcessGroup liquid
 
