--- a/liquid/requirements.txt
+++ b/liquid/requirements.txt
@@ -1,9 +1,12 @@
-Django>=1.4.8, < 1.5
+Django==1.4.10
+Markdown==2.4
 MySQL-python==1.2.3
+Pygments==1.6
 South==0.7.3
 django-bootstrap-form==2.0.5
 django-bootstrap-pagination==0.1.10
 django-ical==1.2
+django-pagedown==0.1.0
 icalendar==3.3
 pyPdf==1.13
 python-dateutil==2.1
@@ -13,6 +16,3 @@ reportlab==2.5
 simplejson==2.4.0
 six==1.3.0
 wsgiref==0.1.2
-pygments
-markdown
-django-pagedown
